--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <title>WeatherBot 2000</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="//fb.me/react-0.14.6.js"></script>
 </head>
-<body>
-<div id="content" class="fullHeight"></div>
+<body style="background-color:#000000">
+<div id="content" ></div>
 <script type="text/javascript" src="/public/bundle.js"></script>
 
 </body>
