--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
 </head>
 <body style="background-color:#000000">
 <div id="content" ></div>
+<script type="text/javascript" src="/public/vendors.js"></script>
 <script type="text/javascript" src="/public/bundle.js"></script>
 
 </body>
