--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
     <title>WeatherBot 2000</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/style.css">
     <script src="//fb.me/react-0.14.6.js"></script>
 </head>
-<body style="background-color:#000000">
 <div id="content" ></div>
 <script type="text/javascript" src="/public/vendors.js"></script>
 <script type="text/javascript" src="/public/bundle.js"></script>
